# MAP-Sol

./: -  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .jsdoc.json  .lintstagedrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  ADD_MUSIC_COMPLETE.md  ADD_MUSIC_IMPLEMENTATION.md  AGENTS.md  AI_FINAL_STATUS.md  AI_SYSTEM_AUDIT.md  AI_SYSTEM_COMPLETE.md  ARCHITECTURE_BEST_PRACTICES.md  ARTWORK_SYSTEM_COMPLETE.md  AUDIO_CONFIG_SYSTEM.md  AUDIO_FLOW.md  AUDIO_PANEL_IMPROVEMENTS.md  AUDIO_PROCESSING_COMPLETE_REPORT.md  BEFORE_AFTER_COMPLETE.md  BRAINSTORM_SESSION_2025.md  CHANGELOG.md  CHECKPOINT_LIVE.md  CI_CD_COMPLETE.md  CLAUDE.md  CLAUDE_BRAIN.md  CLAUDE_CLI_INSTRUCTIONS.md  CLAUDE_ENHANCED.md  CLAUDE_ENHANCED_V2.md  CLAUDE_ORIGINAL_BACKUP.md  CLAUDE_PROMPTS.md  CLEANUP_REPORT.md  CMD_COMMANDS.md  CODE-QUALITY-REVIEW-2025-08-19.md  CODE-QUALITY-REVIEW.md  CODE_OF_CONDUCT.md  (+439 more)
AudioTest/: David Guetta, Bebe Rexha - I'm Good (Blue) (Explicit).lrc  Eslabon Armado, Peso Pluma - Ella Baila Sola.lrc  Jack Harlow - Lovin On Me (Explicit).lrc  Jung Kook, Latto - Seven (feat. Latto) (Explicit).lrc  Mellow Melodies - last night morgan wallen.flac  Metro Boomin, The Weeknd, 21 Savage - Creepin' (Explicit).lrc  Olivia Rodrigo - vampire (Explicit).lrc  Sam Smith, Kim Petras - Unholy.lrc  Taylor Swift - Anti-Hero.lrc  Taylor Swift - Cruel Summer.lrc  Tyla - Water.lrc
Pro/: CMD_FIX.txt
assets/: default-album-preview.html  default-album.js
backup-emergency-2025-08-20T17-42-47/: add-all-tasks.js  add-updated-column.js  analyze-all.js  analyze-duplicate-columns.js  analyze-geographic-distribution.js  analyze-single-track.js  auto-clean-metadata.js  backup-cli.js  batch-enrich-by-region.js  calculate-audio-features-js.js  calculate-audio-features.js  calculate-features-ffmpeg.js  check-ai-enrichment-status.js  check-artwork-status.js  check-openai-limits.js  check-progress.js  clean-all.js  clean-and-sync-metadata.js  cleanup-duplicate-columns.js  create-additional-indexes.js  create-default-album.js  create-indexes.js  create-metadata-inspector-tasks.js  create-normalization-table.js  debug-enhanced-button.js  debug-play.js  diagnose-audio.js  emergency-fix-all.js  enrich-m-pop-muzik.js  enrich-ollie-jerry.js  enrich-pending-with-ai.js  enrich-single-track.js  extract-artwork-missing.js  extract-artwork.js  extract-energy-from-files.js  extract-isrc-from-audio.js  find-and-restore-lyrics.js  fix-all-artwork.js  fix-all-paths.js  fix-all-template-literals.js  (+37 more)
backup_20250819_153018/: ai-analyzer-real.js  app-production.js  artwork-extractor-ui.js  audio-config-manager.js  audio-handler.js  audio-init.js  audio-ipc-bridge.js  audio-normalization-ui.js  audio-processor-integrated.js  auto-artwork-extractor.js  complete-llm-handler.js  complete-metadata-handler.js  database-optimizer.js  database-service-paginated.js  debug-player.html  dj-exporter.js  energy-flow-visualizer.js  enhanced-view-fixed.js  enhanced-view-simple.js  enrichment-ai-handler.js  error-boundary.js  error-handler.js  favorites-manager.js  hybrid-ai-handler.js  index-complete-final.html  index-complete.html  index-secure.html  index-views-backup.html  index-with-search.html  index.html  logger.js  main-modular.js  main-original.js  main-secure.js  media-fix-system.js  metadata-card-enhanced.js  metadata-editor-complete.js  metadata-editor.js  metadata-inspector.js  metadata-viewer-fixed.html  (+53 more)
backups/: full_backup_2025-08-19T12-29-28_manual.db.meta.json  full_backup_2025-08-19T12-33-01_pre_restore.db.meta.json
batch_results/: batch_summary_20250816_221151.json
components/: k-meter-compact.html
config/: app.config.js  csp-config.js
coverage/: audio-player.js.html  block-navigation.js  index.html  lcov.info  production-logger.js.html  virtual-scroller-production.js.html
css/: add-music-button.css  animations.css  audio-panel-enhanced.css  audio-panel.css  energy-flow-visualizer.css  export-ui.css  metadata-card-enhanced.css  player-polish.css  professional-meter-suite.css  similar-tracks-panel.css  simple-player.css  smart-playlist-manager.css  smart-playlist-wizard.css  track-info-panel.css
database/: playlist-schema.sql
docs/: README.md
emergency-backup-2025-08-20T18-47-03/: analyze-all.js  clean-all.js  (+46 more)
(+2989 files in other folders)
